# datasluice

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  release.yml
CHANGELOG/: 0.1.0.md
docs/: api.md  index.md  installation.md  usage.md
src/openharvest/: __init__.py  cli.py
tests/: test_openharvest.py
